// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image explicit sizes renders correctly 1`] = `
<ForwardRef
  data={
    {
      "base64": "data:image/jpeg;base64,<IMAGE-DATA>",
      "height": 421,
      "src": "https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750",
      "width": 750,
    }
  }
  sizes="(max-width: 600px) 200px, 50vw"
>
  <div
    style={
      {
        "maxWidth": 750,
        "overflow": "hidden",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <img
      alt=""
      aria-hidden="true"
      src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI3NTAiIGhlaWdodD0iNDIxIj48L3N2Zz4="
      style={
        {
          "display": "block",
          "width": "100%",
        }
      }
    />
    <img
      alt=""
      aria-hidden="true"
      src="data:image/jpeg;base64,<IMAGE-DATA>"
      style={
        {
          "height": "110%",
          "left": "-5%",
          "maxHeight": "none",
          "maxWidth": "none",
          "objectFit": undefined,
          "objectPosition": undefined,
          "opacity": 1,
          "position": "absolute",
          "top": "-5%",
          "transition": "opacity 500ms",
          "width": "110%",
        }
      }
    />
    <picture>
      <source
        sizes="(max-width: 600px) 200px, 50vw"
        srcSet="https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=0.25 187w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=0.5 375w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=0.75 562w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750 750w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=1.5 1125w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=2 1500w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=3 2250w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=4 3000w"
      />
      <img
        alt=""
        onLoad={[Function]}
        src="https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750"
        style={
          {
            "height": "100%",
            "left": 0,
            "maxHeight": "none",
            "maxWidth": "none",
            "objectFit": undefined,
            "objectPosition": undefined,
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "transition": "opacity 500ms",
            "width": "100%",
          }
        }
      />
    </picture>
    <noscript>
      <picture />
    </noscript>
  </div>
</ForwardRef>
`;

exports[`Image layout=fill not visible renders the blur-up thumb 1`] = `
<ForwardRef
  data={
    {
      "alt": "DatoCMS swag",
      "aspectRatio": 1.7777777777777777,
      "base64": "data:image/jpeg;base64,<IMAGE-DATA>",
      "height": 421,
      "sizes": "(max-width: 750px) 100vw, 750px",
      "src": "https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750",
      "srcSet": "https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.25&fit=crop&w=750 187w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.5&fit=crop&w=750 375w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.75&fit=crop&w=750 562w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=1&fit=crop&w=750 750w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=1.5&fit=crop&w=750 1125w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=2&fit=crop&w=750 1500w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=3&fit=crop&w=750 2250w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=4&fit=crop&w=750 3000w",
      "title": "These are awesome, we know that.",
      "width": 750,
    }
  }
  intersectionThreshold={0.1}
  layout="fill"
>
  <div
    style={
      {
        "height": "100%",
        "left": 0,
        "maxHeight": "none",
        "maxWidth": "none",
        "overflow": "hidden",
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
  >
    <img
      alt=""
      aria-hidden="true"
      src="data:image/jpeg;base64,<IMAGE-DATA>"
      style={
        {
          "height": "110%",
          "left": "-5%",
          "maxHeight": "none",
          "maxWidth": "none",
          "objectFit": undefined,
          "objectPosition": undefined,
          "opacity": 1,
          "position": "absolute",
          "top": "-5%",
          "transition": "opacity 500ms",
          "width": "110%",
        }
      }
    />
    <noscript>
      <picture />
    </noscript>
  </div>
</ForwardRef>
`;

exports[`Image layout=fill visible image loaded shows the image 1`] = `
<ForwardRef
  data={
    {
      "alt": "DatoCMS swag",
      "aspectRatio": 1.7777777777777777,
      "base64": "data:image/jpeg;base64,<IMAGE-DATA>",
      "height": 421,
      "sizes": "(max-width: 750px) 100vw, 750px",
      "src": "https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750",
      "srcSet": "https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.25&fit=crop&w=750 187w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.5&fit=crop&w=750 375w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.75&fit=crop&w=750 562w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=1&fit=crop&w=750 750w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=1.5&fit=crop&w=750 1125w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=2&fit=crop&w=750 1500w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=3&fit=crop&w=750 2250w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=4&fit=crop&w=750 3000w",
      "title": "These are awesome, we know that.",
      "width": 750,
    }
  }
  intersectionThreshold={0.3}
  layout="fill"
>
  <div
    style={
      {
        "height": "100%",
        "left": 0,
        "maxHeight": "none",
        "maxWidth": "none",
        "overflow": "hidden",
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
  >
    <img
      alt=""
      aria-hidden="true"
      src="data:image/jpeg;base64,<IMAGE-DATA>"
      style={
        {
          "height": "110%",
          "left": "-5%",
          "maxHeight": "none",
          "maxWidth": "none",
          "objectFit": undefined,
          "objectPosition": undefined,
          "opacity": 0,
          "position": "absolute",
          "top": "-5%",
          "transition": "opacity 500ms",
          "width": "110%",
        }
      }
    />
    <picture>
      <source
        sizes="(max-width: 750px) 100vw, 750px"
        srcSet="https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.25&fit=crop&w=750 187w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.5&fit=crop&w=750 375w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.75&fit=crop&w=750 562w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=1&fit=crop&w=750 750w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=1.5&fit=crop&w=750 1125w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=2&fit=crop&w=750 1500w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=3&fit=crop&w=750 2250w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=4&fit=crop&w=750 3000w"
      />
      <img
        alt="DatoCMS swag"
        onLoad={[Function]}
        src="https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750"
        style={
          {
            "height": "100%",
            "left": 0,
            "maxHeight": "none",
            "maxWidth": "none",
            "objectFit": undefined,
            "objectPosition": undefined,
            "opacity": 1,
            "position": "absolute",
            "top": 0,
            "transition": "opacity 500ms",
            "width": "100%",
          }
        }
        title="These are awesome, we know that."
      />
    </picture>
    <noscript>
      <picture />
    </noscript>
  </div>
</ForwardRef>
`;

exports[`Image layout=fill visible renders the image (minimal data) 1`] = `
<ForwardRef
  data={
    {
      "base64": "data:image/jpeg;base64,<IMAGE-DATA>",
      "height": 421,
      "src": "https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750",
      "width": 750,
    }
  }
  intersectionThreshold={0.2}
  layout="fill"
>
  <div
    style={
      {
        "height": "100%",
        "left": 0,
        "maxHeight": "none",
        "maxWidth": "none",
        "overflow": "hidden",
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
  >
    <img
      alt=""
      aria-hidden="true"
      src="data:image/jpeg;base64,<IMAGE-DATA>"
      style={
        {
          "height": "110%",
          "left": "-5%",
          "maxHeight": "none",
          "maxWidth": "none",
          "objectFit": undefined,
          "objectPosition": undefined,
          "opacity": 1,
          "position": "absolute",
          "top": "-5%",
          "transition": "opacity 500ms",
          "width": "110%",
        }
      }
    />
    <picture>
      <source
        srcSet="https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=0.25 187w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=0.5 375w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=0.75 562w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750 750w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=1.5 1125w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=2 1500w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=3 2250w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=4 3000w"
      />
      <img
        alt=""
        onLoad={[Function]}
        src="https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750"
        style={
          {
            "height": "100%",
            "left": 0,
            "maxHeight": "none",
            "maxWidth": "none",
            "objectFit": undefined,
            "objectPosition": undefined,
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "transition": "opacity 500ms",
            "width": "100%",
          }
        }
      />
    </picture>
    <noscript>
      <picture />
    </noscript>
  </div>
</ForwardRef>
`;

exports[`Image layout=fill visible renders the image (relative URL) 1`] = `
<ForwardRef
  data={
    {
      "base64": "data:image/jpeg;base64,<IMAGE-DATA>",
      "height": 421,
      "src": "/205/image.png?ar=16%3A9&fit=crop&w=750",
      "width": 750,
    }
  }
  intersectionThreshold={0.2}
  layout="fill"
>
  <div
    style={
      {
        "height": "100%",
        "left": 0,
        "maxHeight": "none",
        "maxWidth": "none",
        "overflow": "hidden",
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
  >
    <img
      alt=""
      aria-hidden="true"
      src="data:image/jpeg;base64,<IMAGE-DATA>"
      style={
        {
          "height": "110%",
          "left": "-5%",
          "maxHeight": "none",
          "maxWidth": "none",
          "objectFit": undefined,
          "objectPosition": undefined,
          "opacity": 1,
          "position": "absolute",
          "top": "-5%",
          "transition": "opacity 500ms",
          "width": "110%",
        }
      }
    />
    <picture>
      <source
        srcSet="/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=0.25 187w,/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=0.5 375w,/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=0.75 562w,/205/image.png?ar=16%3A9&fit=crop&w=750 750w,/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=1.5 1125w,/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=2 1500w,/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=3 2250w,/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=4 3000w"
      />
      <img
        alt=""
        onLoad={[Function]}
        src="/205/image.png?ar=16%3A9&fit=crop&w=750"
        style={
          {
            "height": "100%",
            "left": 0,
            "maxHeight": "none",
            "maxWidth": "none",
            "objectFit": undefined,
            "objectPosition": undefined,
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "transition": "opacity 500ms",
            "width": "100%",
          }
        }
      />
    </picture>
    <noscript>
      <picture />
    </noscript>
  </div>
</ForwardRef>
`;

exports[`Image layout=fill visible renders the image 1`] = `
<ForwardRef
  data={
    {
      "alt": "DatoCMS swag",
      "aspectRatio": 1.7777777777777777,
      "base64": "data:image/jpeg;base64,<IMAGE-DATA>",
      "height": 421,
      "sizes": "(max-width: 750px) 100vw, 750px",
      "src": "https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750",
      "srcSet": "https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.25&fit=crop&w=750 187w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.5&fit=crop&w=750 375w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.75&fit=crop&w=750 562w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=1&fit=crop&w=750 750w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=1.5&fit=crop&w=750 1125w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=2&fit=crop&w=750 1500w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=3&fit=crop&w=750 2250w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=4&fit=crop&w=750 3000w",
      "title": "These are awesome, we know that.",
      "width": 750,
    }
  }
  intersectionThreshold={0.2}
  layout="fill"
>
  <div
    style={
      {
        "height": "100%",
        "left": 0,
        "maxHeight": "none",
        "maxWidth": "none",
        "overflow": "hidden",
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
  >
    <img
      alt=""
      aria-hidden="true"
      src="data:image/jpeg;base64,<IMAGE-DATA>"
      style={
        {
          "height": "110%",
          "left": "-5%",
          "maxHeight": "none",
          "maxWidth": "none",
          "objectFit": undefined,
          "objectPosition": undefined,
          "opacity": 1,
          "position": "absolute",
          "top": "-5%",
          "transition": "opacity 500ms",
          "width": "110%",
        }
      }
    />
    <picture>
      <source
        sizes="(max-width: 750px) 100vw, 750px"
        srcSet="https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.25&fit=crop&w=750 187w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.5&fit=crop&w=750 375w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.75&fit=crop&w=750 562w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=1&fit=crop&w=750 750w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=1.5&fit=crop&w=750 1125w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=2&fit=crop&w=750 1500w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=3&fit=crop&w=750 2250w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=4&fit=crop&w=750 3000w"
      />
      <img
        alt="DatoCMS swag"
        onLoad={[Function]}
        src="https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750"
        style={
          {
            "height": "100%",
            "left": 0,
            "maxHeight": "none",
            "maxWidth": "none",
            "objectFit": undefined,
            "objectPosition": undefined,
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "transition": "opacity 500ms",
            "width": "100%",
          }
        }
        title="These are awesome, we know that."
      />
    </picture>
    <noscript>
      <picture />
    </noscript>
  </div>
</ForwardRef>
`;

exports[`Image layout=fixed not visible renders the blur-up thumb 1`] = `
<ForwardRef
  data={
    {
      "alt": "DatoCMS swag",
      "aspectRatio": 1.7777777777777777,
      "base64": "data:image/jpeg;base64,<IMAGE-DATA>",
      "height": 421,
      "sizes": "(max-width: 750px) 100vw, 750px",
      "src": "https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750",
      "srcSet": "https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.25&fit=crop&w=750 187w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.5&fit=crop&w=750 375w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.75&fit=crop&w=750 562w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=1&fit=crop&w=750 750w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=1.5&fit=crop&w=750 1125w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=2&fit=crop&w=750 1500w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=3&fit=crop&w=750 2250w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=4&fit=crop&w=750 3000w",
      "title": "These are awesome, we know that.",
      "width": 750,
    }
  }
  intersectionThreshold={0.1}
  layout="fixed"
>
  <div
    style={
      {
        "overflow": "hidden",
        "position": "relative",
        "width": 750,
      }
    }
  >
    <img
      alt=""
      aria-hidden="true"
      src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI3NTAiIGhlaWdodD0iNDIxIj48L3N2Zz4="
      style={
        {
          "display": "block",
          "width": "100%",
        }
      }
    />
    <img
      alt=""
      aria-hidden="true"
      src="data:image/jpeg;base64,<IMAGE-DATA>"
      style={
        {
          "height": "110%",
          "left": "-5%",
          "maxHeight": "none",
          "maxWidth": "none",
          "objectFit": undefined,
          "objectPosition": undefined,
          "opacity": 1,
          "position": "absolute",
          "top": "-5%",
          "transition": "opacity 500ms",
          "width": "110%",
        }
      }
    />
    <noscript>
      <picture />
    </noscript>
  </div>
</ForwardRef>
`;

exports[`Image layout=fixed visible image loaded shows the image 1`] = `
<ForwardRef
  data={
    {
      "alt": "DatoCMS swag",
      "aspectRatio": 1.7777777777777777,
      "base64": "data:image/jpeg;base64,<IMAGE-DATA>",
      "height": 421,
      "sizes": "(max-width: 750px) 100vw, 750px",
      "src": "https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750",
      "srcSet": "https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.25&fit=crop&w=750 187w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.5&fit=crop&w=750 375w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.75&fit=crop&w=750 562w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=1&fit=crop&w=750 750w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=1.5&fit=crop&w=750 1125w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=2&fit=crop&w=750 1500w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=3&fit=crop&w=750 2250w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=4&fit=crop&w=750 3000w",
      "title": "These are awesome, we know that.",
      "width": 750,
    }
  }
  intersectionThreshold={0.3}
  layout="fixed"
>
  <div
    style={
      {
        "overflow": "hidden",
        "position": "relative",
        "width": 750,
      }
    }
  >
    <img
      alt=""
      aria-hidden="true"
      src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI3NTAiIGhlaWdodD0iNDIxIj48L3N2Zz4="
      style={
        {
          "display": "block",
          "width": "100%",
        }
      }
    />
    <img
      alt=""
      aria-hidden="true"
      src="data:image/jpeg;base64,<IMAGE-DATA>"
      style={
        {
          "height": "110%",
          "left": "-5%",
          "maxHeight": "none",
          "maxWidth": "none",
          "objectFit": undefined,
          "objectPosition": undefined,
          "opacity": 0,
          "position": "absolute",
          "top": "-5%",
          "transition": "opacity 500ms",
          "width": "110%",
        }
      }
    />
    <picture>
      <source
        sizes="(max-width: 750px) 100vw, 750px"
        srcSet="https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.25&fit=crop&w=750 187w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.5&fit=crop&w=750 375w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.75&fit=crop&w=750 562w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=1&fit=crop&w=750 750w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=1.5&fit=crop&w=750 1125w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=2&fit=crop&w=750 1500w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=3&fit=crop&w=750 2250w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=4&fit=crop&w=750 3000w"
      />
      <img
        alt="DatoCMS swag"
        onLoad={[Function]}
        src="https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750"
        style={
          {
            "height": "100%",
            "left": 0,
            "maxHeight": "none",
            "maxWidth": "none",
            "objectFit": undefined,
            "objectPosition": undefined,
            "opacity": 1,
            "position": "absolute",
            "top": 0,
            "transition": "opacity 500ms",
            "width": "100%",
          }
        }
        title="These are awesome, we know that."
      />
    </picture>
    <noscript>
      <picture />
    </noscript>
  </div>
</ForwardRef>
`;

exports[`Image layout=fixed visible renders the image (minimal data) 1`] = `
<ForwardRef
  data={
    {
      "base64": "data:image/jpeg;base64,<IMAGE-DATA>",
      "height": 421,
      "src": "https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750",
      "width": 750,
    }
  }
  intersectionThreshold={0.2}
  layout="fixed"
>
  <div
    style={
      {
        "overflow": "hidden",
        "position": "relative",
        "width": 750,
      }
    }
  >
    <img
      alt=""
      aria-hidden="true"
      src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI3NTAiIGhlaWdodD0iNDIxIj48L3N2Zz4="
      style={
        {
          "display": "block",
          "width": "100%",
        }
      }
    />
    <img
      alt=""
      aria-hidden="true"
      src="data:image/jpeg;base64,<IMAGE-DATA>"
      style={
        {
          "height": "110%",
          "left": "-5%",
          "maxHeight": "none",
          "maxWidth": "none",
          "objectFit": undefined,
          "objectPosition": undefined,
          "opacity": 1,
          "position": "absolute",
          "top": "-5%",
          "transition": "opacity 500ms",
          "width": "110%",
        }
      }
    />
    <picture>
      <source
        srcSet="https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=0.25 187w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=0.5 375w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=0.75 562w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750 750w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=1.5 1125w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=2 1500w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=3 2250w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=4 3000w"
      />
      <img
        alt=""
        onLoad={[Function]}
        src="https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750"
        style={
          {
            "height": "100%",
            "left": 0,
            "maxHeight": "none",
            "maxWidth": "none",
            "objectFit": undefined,
            "objectPosition": undefined,
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "transition": "opacity 500ms",
            "width": "100%",
          }
        }
      />
    </picture>
    <noscript>
      <picture />
    </noscript>
  </div>
</ForwardRef>
`;

exports[`Image layout=fixed visible renders the image (relative URL) 1`] = `
<ForwardRef
  data={
    {
      "base64": "data:image/jpeg;base64,<IMAGE-DATA>",
      "height": 421,
      "src": "/205/image.png?ar=16%3A9&fit=crop&w=750",
      "width": 750,
    }
  }
  intersectionThreshold={0.2}
  layout="fixed"
>
  <div
    style={
      {
        "overflow": "hidden",
        "position": "relative",
        "width": 750,
      }
    }
  >
    <img
      alt=""
      aria-hidden="true"
      src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI3NTAiIGhlaWdodD0iNDIxIj48L3N2Zz4="
      style={
        {
          "display": "block",
          "width": "100%",
        }
      }
    />
    <img
      alt=""
      aria-hidden="true"
      src="data:image/jpeg;base64,<IMAGE-DATA>"
      style={
        {
          "height": "110%",
          "left": "-5%",
          "maxHeight": "none",
          "maxWidth": "none",
          "objectFit": undefined,
          "objectPosition": undefined,
          "opacity": 1,
          "position": "absolute",
          "top": "-5%",
          "transition": "opacity 500ms",
          "width": "110%",
        }
      }
    />
    <picture>
      <source
        srcSet="/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=0.25 187w,/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=0.5 375w,/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=0.75 562w,/205/image.png?ar=16%3A9&fit=crop&w=750 750w,/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=1.5 1125w,/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=2 1500w,/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=3 2250w,/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=4 3000w"
      />
      <img
        alt=""
        onLoad={[Function]}
        src="/205/image.png?ar=16%3A9&fit=crop&w=750"
        style={
          {
            "height": "100%",
            "left": 0,
            "maxHeight": "none",
            "maxWidth": "none",
            "objectFit": undefined,
            "objectPosition": undefined,
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "transition": "opacity 500ms",
            "width": "100%",
          }
        }
      />
    </picture>
    <noscript>
      <picture />
    </noscript>
  </div>
</ForwardRef>
`;

exports[`Image layout=fixed visible renders the image 1`] = `
<ForwardRef
  data={
    {
      "alt": "DatoCMS swag",
      "aspectRatio": 1.7777777777777777,
      "base64": "data:image/jpeg;base64,<IMAGE-DATA>",
      "height": 421,
      "sizes": "(max-width: 750px) 100vw, 750px",
      "src": "https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750",
      "srcSet": "https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.25&fit=crop&w=750 187w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.5&fit=crop&w=750 375w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.75&fit=crop&w=750 562w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=1&fit=crop&w=750 750w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=1.5&fit=crop&w=750 1125w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=2&fit=crop&w=750 1500w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=3&fit=crop&w=750 2250w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=4&fit=crop&w=750 3000w",
      "title": "These are awesome, we know that.",
      "width": 750,
    }
  }
  intersectionThreshold={0.2}
  layout="fixed"
>
  <div
    style={
      {
        "overflow": "hidden",
        "position": "relative",
        "width": 750,
      }
    }
  >
    <img
      alt=""
      aria-hidden="true"
      src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI3NTAiIGhlaWdodD0iNDIxIj48L3N2Zz4="
      style={
        {
          "display": "block",
          "width": "100%",
        }
      }
    />
    <img
      alt=""
      aria-hidden="true"
      src="data:image/jpeg;base64,<IMAGE-DATA>"
      style={
        {
          "height": "110%",
          "left": "-5%",
          "maxHeight": "none",
          "maxWidth": "none",
          "objectFit": undefined,
          "objectPosition": undefined,
          "opacity": 1,
          "position": "absolute",
          "top": "-5%",
          "transition": "opacity 500ms",
          "width": "110%",
        }
      }
    />
    <picture>
      <source
        sizes="(max-width: 750px) 100vw, 750px"
        srcSet="https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.25&fit=crop&w=750 187w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.5&fit=crop&w=750 375w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.75&fit=crop&w=750 562w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=1&fit=crop&w=750 750w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=1.5&fit=crop&w=750 1125w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=2&fit=crop&w=750 1500w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=3&fit=crop&w=750 2250w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=4&fit=crop&w=750 3000w"
      />
      <img
        alt="DatoCMS swag"
        onLoad={[Function]}
        src="https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750"
        style={
          {
            "height": "100%",
            "left": 0,
            "maxHeight": "none",
            "maxWidth": "none",
            "objectFit": undefined,
            "objectPosition": undefined,
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "transition": "opacity 500ms",
            "width": "100%",
          }
        }
        title="These are awesome, we know that."
      />
    </picture>
    <noscript>
      <picture />
    </noscript>
  </div>
</ForwardRef>
`;

exports[`Image layout=intrinsic not visible renders the blur-up thumb 1`] = `
<ForwardRef
  data={
    {
      "alt": "DatoCMS swag",
      "aspectRatio": 1.7777777777777777,
      "base64": "data:image/jpeg;base64,<IMAGE-DATA>",
      "height": 421,
      "sizes": "(max-width: 750px) 100vw, 750px",
      "src": "https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750",
      "srcSet": "https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.25&fit=crop&w=750 187w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.5&fit=crop&w=750 375w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.75&fit=crop&w=750 562w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=1&fit=crop&w=750 750w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=1.5&fit=crop&w=750 1125w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=2&fit=crop&w=750 1500w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=3&fit=crop&w=750 2250w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=4&fit=crop&w=750 3000w",
      "title": "These are awesome, we know that.",
      "width": 750,
    }
  }
  intersectionThreshold={0.1}
  layout="intrinsic"
>
  <div
    style={
      {
        "maxWidth": 750,
        "overflow": "hidden",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <img
      alt=""
      aria-hidden="true"
      src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI3NTAiIGhlaWdodD0iNDIxIj48L3N2Zz4="
      style={
        {
          "display": "block",
          "width": "100%",
        }
      }
    />
    <img
      alt=""
      aria-hidden="true"
      src="data:image/jpeg;base64,<IMAGE-DATA>"
      style={
        {
          "height": "110%",
          "left": "-5%",
          "maxHeight": "none",
          "maxWidth": "none",
          "objectFit": undefined,
          "objectPosition": undefined,
          "opacity": 1,
          "position": "absolute",
          "top": "-5%",
          "transition": "opacity 500ms",
          "width": "110%",
        }
      }
    />
    <noscript>
      <picture />
    </noscript>
  </div>
</ForwardRef>
`;

exports[`Image layout=intrinsic visible image loaded shows the image 1`] = `
<ForwardRef
  data={
    {
      "alt": "DatoCMS swag",
      "aspectRatio": 1.7777777777777777,
      "base64": "data:image/jpeg;base64,<IMAGE-DATA>",
      "height": 421,
      "sizes": "(max-width: 750px) 100vw, 750px",
      "src": "https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750",
      "srcSet": "https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.25&fit=crop&w=750 187w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.5&fit=crop&w=750 375w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.75&fit=crop&w=750 562w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=1&fit=crop&w=750 750w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=1.5&fit=crop&w=750 1125w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=2&fit=crop&w=750 1500w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=3&fit=crop&w=750 2250w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=4&fit=crop&w=750 3000w",
      "title": "These are awesome, we know that.",
      "width": 750,
    }
  }
  intersectionThreshold={0.3}
  layout="intrinsic"
>
  <div
    style={
      {
        "maxWidth": 750,
        "overflow": "hidden",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <img
      alt=""
      aria-hidden="true"
      src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI3NTAiIGhlaWdodD0iNDIxIj48L3N2Zz4="
      style={
        {
          "display": "block",
          "width": "100%",
        }
      }
    />
    <img
      alt=""
      aria-hidden="true"
      src="data:image/jpeg;base64,<IMAGE-DATA>"
      style={
        {
          "height": "110%",
          "left": "-5%",
          "maxHeight": "none",
          "maxWidth": "none",
          "objectFit": undefined,
          "objectPosition": undefined,
          "opacity": 0,
          "position": "absolute",
          "top": "-5%",
          "transition": "opacity 500ms",
          "width": "110%",
        }
      }
    />
    <picture>
      <source
        sizes="(max-width: 750px) 100vw, 750px"
        srcSet="https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.25&fit=crop&w=750 187w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.5&fit=crop&w=750 375w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.75&fit=crop&w=750 562w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=1&fit=crop&w=750 750w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=1.5&fit=crop&w=750 1125w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=2&fit=crop&w=750 1500w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=3&fit=crop&w=750 2250w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=4&fit=crop&w=750 3000w"
      />
      <img
        alt="DatoCMS swag"
        onLoad={[Function]}
        src="https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750"
        style={
          {
            "height": "100%",
            "left": 0,
            "maxHeight": "none",
            "maxWidth": "none",
            "objectFit": undefined,
            "objectPosition": undefined,
            "opacity": 1,
            "position": "absolute",
            "top": 0,
            "transition": "opacity 500ms",
            "width": "100%",
          }
        }
        title="These are awesome, we know that."
      />
    </picture>
    <noscript>
      <picture />
    </noscript>
  </div>
</ForwardRef>
`;

exports[`Image layout=intrinsic visible renders the image (minimal data) 1`] = `
<ForwardRef
  data={
    {
      "base64": "data:image/jpeg;base64,<IMAGE-DATA>",
      "height": 421,
      "src": "https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750",
      "width": 750,
    }
  }
  intersectionThreshold={0.2}
  layout="intrinsic"
>
  <div
    style={
      {
        "maxWidth": 750,
        "overflow": "hidden",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <img
      alt=""
      aria-hidden="true"
      src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI3NTAiIGhlaWdodD0iNDIxIj48L3N2Zz4="
      style={
        {
          "display": "block",
          "width": "100%",
        }
      }
    />
    <img
      alt=""
      aria-hidden="true"
      src="data:image/jpeg;base64,<IMAGE-DATA>"
      style={
        {
          "height": "110%",
          "left": "-5%",
          "maxHeight": "none",
          "maxWidth": "none",
          "objectFit": undefined,
          "objectPosition": undefined,
          "opacity": 1,
          "position": "absolute",
          "top": "-5%",
          "transition": "opacity 500ms",
          "width": "110%",
        }
      }
    />
    <picture>
      <source
        srcSet="https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=0.25 187w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=0.5 375w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=0.75 562w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750 750w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=1.5 1125w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=2 1500w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=3 2250w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=4 3000w"
      />
      <img
        alt=""
        onLoad={[Function]}
        src="https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750"
        style={
          {
            "height": "100%",
            "left": 0,
            "maxHeight": "none",
            "maxWidth": "none",
            "objectFit": undefined,
            "objectPosition": undefined,
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "transition": "opacity 500ms",
            "width": "100%",
          }
        }
      />
    </picture>
    <noscript>
      <picture />
    </noscript>
  </div>
</ForwardRef>
`;

exports[`Image layout=intrinsic visible renders the image (relative URL) 1`] = `
<ForwardRef
  data={
    {
      "base64": "data:image/jpeg;base64,<IMAGE-DATA>",
      "height": 421,
      "src": "/205/image.png?ar=16%3A9&fit=crop&w=750",
      "width": 750,
    }
  }
  intersectionThreshold={0.2}
  layout="intrinsic"
>
  <div
    style={
      {
        "maxWidth": 750,
        "overflow": "hidden",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <img
      alt=""
      aria-hidden="true"
      src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI3NTAiIGhlaWdodD0iNDIxIj48L3N2Zz4="
      style={
        {
          "display": "block",
          "width": "100%",
        }
      }
    />
    <img
      alt=""
      aria-hidden="true"
      src="data:image/jpeg;base64,<IMAGE-DATA>"
      style={
        {
          "height": "110%",
          "left": "-5%",
          "maxHeight": "none",
          "maxWidth": "none",
          "objectFit": undefined,
          "objectPosition": undefined,
          "opacity": 1,
          "position": "absolute",
          "top": "-5%",
          "transition": "opacity 500ms",
          "width": "110%",
        }
      }
    />
    <picture>
      <source
        srcSet="/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=0.25 187w,/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=0.5 375w,/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=0.75 562w,/205/image.png?ar=16%3A9&fit=crop&w=750 750w,/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=1.5 1125w,/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=2 1500w,/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=3 2250w,/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=4 3000w"
      />
      <img
        alt=""
        onLoad={[Function]}
        src="/205/image.png?ar=16%3A9&fit=crop&w=750"
        style={
          {
            "height": "100%",
            "left": 0,
            "maxHeight": "none",
            "maxWidth": "none",
            "objectFit": undefined,
            "objectPosition": undefined,
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "transition": "opacity 500ms",
            "width": "100%",
          }
        }
      />
    </picture>
    <noscript>
      <picture />
    </noscript>
  </div>
</ForwardRef>
`;

exports[`Image layout=intrinsic visible renders the image 1`] = `
<ForwardRef
  data={
    {
      "alt": "DatoCMS swag",
      "aspectRatio": 1.7777777777777777,
      "base64": "data:image/jpeg;base64,<IMAGE-DATA>",
      "height": 421,
      "sizes": "(max-width: 750px) 100vw, 750px",
      "src": "https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750",
      "srcSet": "https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.25&fit=crop&w=750 187w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.5&fit=crop&w=750 375w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.75&fit=crop&w=750 562w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=1&fit=crop&w=750 750w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=1.5&fit=crop&w=750 1125w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=2&fit=crop&w=750 1500w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=3&fit=crop&w=750 2250w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=4&fit=crop&w=750 3000w",
      "title": "These are awesome, we know that.",
      "width": 750,
    }
  }
  intersectionThreshold={0.2}
  layout="intrinsic"
>
  <div
    style={
      {
        "maxWidth": 750,
        "overflow": "hidden",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <img
      alt=""
      aria-hidden="true"
      src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI3NTAiIGhlaWdodD0iNDIxIj48L3N2Zz4="
      style={
        {
          "display": "block",
          "width": "100%",
        }
      }
    />
    <img
      alt=""
      aria-hidden="true"
      src="data:image/jpeg;base64,<IMAGE-DATA>"
      style={
        {
          "height": "110%",
          "left": "-5%",
          "maxHeight": "none",
          "maxWidth": "none",
          "objectFit": undefined,
          "objectPosition": undefined,
          "opacity": 1,
          "position": "absolute",
          "top": "-5%",
          "transition": "opacity 500ms",
          "width": "110%",
        }
      }
    />
    <picture>
      <source
        sizes="(max-width: 750px) 100vw, 750px"
        srcSet="https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.25&fit=crop&w=750 187w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.5&fit=crop&w=750 375w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.75&fit=crop&w=750 562w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=1&fit=crop&w=750 750w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=1.5&fit=crop&w=750 1125w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=2&fit=crop&w=750 1500w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=3&fit=crop&w=750 2250w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=4&fit=crop&w=750 3000w"
      />
      <img
        alt="DatoCMS swag"
        onLoad={[Function]}
        src="https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750"
        style={
          {
            "height": "100%",
            "left": 0,
            "maxHeight": "none",
            "maxWidth": "none",
            "objectFit": undefined,
            "objectPosition": undefined,
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "transition": "opacity 500ms",
            "width": "100%",
          }
        }
        title="These are awesome, we know that."
      />
    </picture>
    <noscript>
      <picture />
    </noscript>
  </div>
</ForwardRef>
`;

exports[`Image layout=responsive not visible renders the blur-up thumb 1`] = `
<ForwardRef
  data={
    {
      "alt": "DatoCMS swag",
      "aspectRatio": 1.7777777777777777,
      "base64": "data:image/jpeg;base64,<IMAGE-DATA>",
      "height": 421,
      "sizes": "(max-width: 750px) 100vw, 750px",
      "src": "https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750",
      "srcSet": "https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.25&fit=crop&w=750 187w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.5&fit=crop&w=750 375w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.75&fit=crop&w=750 562w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=1&fit=crop&w=750 750w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=1.5&fit=crop&w=750 1125w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=2&fit=crop&w=750 1500w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=3&fit=crop&w=750 2250w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=4&fit=crop&w=750 3000w",
      "title": "These are awesome, we know that.",
      "width": 750,
    }
  }
  intersectionThreshold={0.1}
  layout="responsive"
>
  <div
    style={
      {
        "overflow": "hidden",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <img
      alt=""
      aria-hidden="true"
      src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI3NTAiIGhlaWdodD0iNDIxIj48L3N2Zz4="
      style={
        {
          "display": "block",
          "width": "100%",
        }
      }
    />
    <img
      alt=""
      aria-hidden="true"
      src="data:image/jpeg;base64,<IMAGE-DATA>"
      style={
        {
          "height": "110%",
          "left": "-5%",
          "maxHeight": "none",
          "maxWidth": "none",
          "objectFit": undefined,
          "objectPosition": undefined,
          "opacity": 1,
          "position": "absolute",
          "top": "-5%",
          "transition": "opacity 500ms",
          "width": "110%",
        }
      }
    />
    <noscript>
      <picture />
    </noscript>
  </div>
</ForwardRef>
`;

exports[`Image layout=responsive visible image loaded shows the image 1`] = `
<ForwardRef
  data={
    {
      "alt": "DatoCMS swag",
      "aspectRatio": 1.7777777777777777,
      "base64": "data:image/jpeg;base64,<IMAGE-DATA>",
      "height": 421,
      "sizes": "(max-width: 750px) 100vw, 750px",
      "src": "https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750",
      "srcSet": "https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.25&fit=crop&w=750 187w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.5&fit=crop&w=750 375w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.75&fit=crop&w=750 562w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=1&fit=crop&w=750 750w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=1.5&fit=crop&w=750 1125w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=2&fit=crop&w=750 1500w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=3&fit=crop&w=750 2250w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=4&fit=crop&w=750 3000w",
      "title": "These are awesome, we know that.",
      "width": 750,
    }
  }
  intersectionThreshold={0.3}
  layout="responsive"
>
  <div
    style={
      {
        "overflow": "hidden",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <img
      alt=""
      aria-hidden="true"
      src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI3NTAiIGhlaWdodD0iNDIxIj48L3N2Zz4="
      style={
        {
          "display": "block",
          "width": "100%",
        }
      }
    />
    <img
      alt=""
      aria-hidden="true"
      src="data:image/jpeg;base64,<IMAGE-DATA>"
      style={
        {
          "height": "110%",
          "left": "-5%",
          "maxHeight": "none",
          "maxWidth": "none",
          "objectFit": undefined,
          "objectPosition": undefined,
          "opacity": 0,
          "position": "absolute",
          "top": "-5%",
          "transition": "opacity 500ms",
          "width": "110%",
        }
      }
    />
    <picture>
      <source
        sizes="(max-width: 750px) 100vw, 750px"
        srcSet="https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.25&fit=crop&w=750 187w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.5&fit=crop&w=750 375w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.75&fit=crop&w=750 562w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=1&fit=crop&w=750 750w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=1.5&fit=crop&w=750 1125w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=2&fit=crop&w=750 1500w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=3&fit=crop&w=750 2250w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=4&fit=crop&w=750 3000w"
      />
      <img
        alt="DatoCMS swag"
        onLoad={[Function]}
        src="https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750"
        style={
          {
            "height": "100%",
            "left": 0,
            "maxHeight": "none",
            "maxWidth": "none",
            "objectFit": undefined,
            "objectPosition": undefined,
            "opacity": 1,
            "position": "absolute",
            "top": 0,
            "transition": "opacity 500ms",
            "width": "100%",
          }
        }
        title="These are awesome, we know that."
      />
    </picture>
    <noscript>
      <picture />
    </noscript>
  </div>
</ForwardRef>
`;

exports[`Image layout=responsive visible renders the image (minimal data) 1`] = `
<ForwardRef
  data={
    {
      "base64": "data:image/jpeg;base64,<IMAGE-DATA>",
      "height": 421,
      "src": "https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750",
      "width": 750,
    }
  }
  intersectionThreshold={0.2}
  layout="responsive"
>
  <div
    style={
      {
        "overflow": "hidden",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <img
      alt=""
      aria-hidden="true"
      src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI3NTAiIGhlaWdodD0iNDIxIj48L3N2Zz4="
      style={
        {
          "display": "block",
          "width": "100%",
        }
      }
    />
    <img
      alt=""
      aria-hidden="true"
      src="data:image/jpeg;base64,<IMAGE-DATA>"
      style={
        {
          "height": "110%",
          "left": "-5%",
          "maxHeight": "none",
          "maxWidth": "none",
          "objectFit": undefined,
          "objectPosition": undefined,
          "opacity": 1,
          "position": "absolute",
          "top": "-5%",
          "transition": "opacity 500ms",
          "width": "110%",
        }
      }
    />
    <picture>
      <source
        srcSet="https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=0.25 187w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=0.5 375w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=0.75 562w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750 750w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=1.5 1125w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=2 1500w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=3 2250w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=4 3000w"
      />
      <img
        alt=""
        onLoad={[Function]}
        src="https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750"
        style={
          {
            "height": "100%",
            "left": 0,
            "maxHeight": "none",
            "maxWidth": "none",
            "objectFit": undefined,
            "objectPosition": undefined,
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "transition": "opacity 500ms",
            "width": "100%",
          }
        }
      />
    </picture>
    <noscript>
      <picture />
    </noscript>
  </div>
</ForwardRef>
`;

exports[`Image layout=responsive visible renders the image (relative URL) 1`] = `
<ForwardRef
  data={
    {
      "base64": "data:image/jpeg;base64,<IMAGE-DATA>",
      "height": 421,
      "src": "/205/image.png?ar=16%3A9&fit=crop&w=750",
      "width": 750,
    }
  }
  intersectionThreshold={0.2}
  layout="responsive"
>
  <div
    style={
      {
        "overflow": "hidden",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <img
      alt=""
      aria-hidden="true"
      src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI3NTAiIGhlaWdodD0iNDIxIj48L3N2Zz4="
      style={
        {
          "display": "block",
          "width": "100%",
        }
      }
    />
    <img
      alt=""
      aria-hidden="true"
      src="data:image/jpeg;base64,<IMAGE-DATA>"
      style={
        {
          "height": "110%",
          "left": "-5%",
          "maxHeight": "none",
          "maxWidth": "none",
          "objectFit": undefined,
          "objectPosition": undefined,
          "opacity": 1,
          "position": "absolute",
          "top": "-5%",
          "transition": "opacity 500ms",
          "width": "110%",
        }
      }
    />
    <picture>
      <source
        srcSet="/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=0.25 187w,/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=0.5 375w,/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=0.75 562w,/205/image.png?ar=16%3A9&fit=crop&w=750 750w,/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=1.5 1125w,/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=2 1500w,/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=3 2250w,/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=4 3000w"
      />
      <img
        alt=""
        onLoad={[Function]}
        src="/205/image.png?ar=16%3A9&fit=crop&w=750"
        style={
          {
            "height": "100%",
            "left": 0,
            "maxHeight": "none",
            "maxWidth": "none",
            "objectFit": undefined,
            "objectPosition": undefined,
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "transition": "opacity 500ms",
            "width": "100%",
          }
        }
      />
    </picture>
    <noscript>
      <picture />
    </noscript>
  </div>
</ForwardRef>
`;

exports[`Image layout=responsive visible renders the image 1`] = `
<ForwardRef
  data={
    {
      "alt": "DatoCMS swag",
      "aspectRatio": 1.7777777777777777,
      "base64": "data:image/jpeg;base64,<IMAGE-DATA>",
      "height": 421,
      "sizes": "(max-width: 750px) 100vw, 750px",
      "src": "https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750",
      "srcSet": "https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.25&fit=crop&w=750 187w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.5&fit=crop&w=750 375w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.75&fit=crop&w=750 562w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=1&fit=crop&w=750 750w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=1.5&fit=crop&w=750 1125w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=2&fit=crop&w=750 1500w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=3&fit=crop&w=750 2250w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=4&fit=crop&w=750 3000w",
      "title": "These are awesome, we know that.",
      "width": 750,
    }
  }
  intersectionThreshold={0.2}
  layout="responsive"
>
  <div
    style={
      {
        "overflow": "hidden",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <img
      alt=""
      aria-hidden="true"
      src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI3NTAiIGhlaWdodD0iNDIxIj48L3N2Zz4="
      style={
        {
          "display": "block",
          "width": "100%",
        }
      }
    />
    <img
      alt=""
      aria-hidden="true"
      src="data:image/jpeg;base64,<IMAGE-DATA>"
      style={
        {
          "height": "110%",
          "left": "-5%",
          "maxHeight": "none",
          "maxWidth": "none",
          "objectFit": undefined,
          "objectPosition": undefined,
          "opacity": 1,
          "position": "absolute",
          "top": "-5%",
          "transition": "opacity 500ms",
          "width": "110%",
        }
      }
    />
    <picture>
      <source
        sizes="(max-width: 750px) 100vw, 750px"
        srcSet="https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.25&fit=crop&w=750 187w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.5&fit=crop&w=750 375w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=0.75&fit=crop&w=750 562w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=1&fit=crop&w=750 750w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=1.5&fit=crop&w=750 1125w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=2&fit=crop&w=750 1500w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=3&fit=crop&w=750 2250w,↵https://www.datocms-assets.com/205/image.png?ar=16%3A9&dpr=4&fit=crop&w=750 3000w"
      />
      <img
        alt="DatoCMS swag"
        onLoad={[Function]}
        src="https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750"
        style={
          {
            "height": "100%",
            "left": 0,
            "maxHeight": "none",
            "maxWidth": "none",
            "objectFit": undefined,
            "objectPosition": undefined,
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "transition": "opacity 500ms",
            "width": "100%",
          }
        }
        title="These are awesome, we know that."
      />
    </picture>
    <noscript>
      <picture />
    </noscript>
  </div>
</ForwardRef>
`;

exports[`Image passing className and/or style renders correctly 1`] = `
<ForwardRef
  className="class-name"
  data={
    {
      "base64": "data:image/jpeg;base64,<IMAGE-DATA>",
      "height": 421,
      "src": "https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750",
      "width": 750,
    }
  }
  pictureClassName="picture-class-name"
  pictureStyle={
    {
      "border": "1px solid yellow ",
    }
  }
  placeholderClassName="placeholder-class-name"
  placeholderStyle={
    {
      "border": "1px solid green ",
    }
  }
  style={
    {
      "border": "1px solid red",
    }
  }
>
  <div
    className="class-name"
    style={
      {
        "border": "1px solid red",
        "maxWidth": 750,
        "overflow": "hidden",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <img
      alt=""
      aria-hidden="true"
      className="picture-class-name"
      src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI3NTAiIGhlaWdodD0iNDIxIj48L3N2Zz4="
      style={
        {
          "border": "1px solid yellow ",
          "display": "block",
          "width": "100%",
        }
      }
    />
    <img
      alt=""
      aria-hidden="true"
      className="placeholder-class-name"
      src="data:image/jpeg;base64,<IMAGE-DATA>"
      style={
        {
          "border": "1px solid green ",
          "height": "110%",
          "left": "-5%",
          "maxHeight": "none",
          "maxWidth": "none",
          "objectFit": undefined,
          "objectPosition": undefined,
          "opacity": 1,
          "position": "absolute",
          "top": "-5%",
          "transition": "opacity 500ms",
          "width": "110%",
        }
      }
    />
    <picture>
      <source
        srcSet="https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=0.25 187w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=0.5 375w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=0.75 562w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750 750w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=1.5 1125w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=2 1500w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=3 2250w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=4 3000w"
      />
      <img
        alt=""
        className="picture-class-name"
        onLoad={[Function]}
        src="https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750"
        style={
          {
            "border": "1px solid yellow ",
            "height": "100%",
            "left": 0,
            "maxHeight": "none",
            "maxWidth": "none",
            "objectFit": undefined,
            "objectPosition": undefined,
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "transition": "opacity 500ms",
            "width": "100%",
          }
        }
      />
    </picture>
    <noscript>
      <picture />
    </noscript>
  </div>
</ForwardRef>
`;

exports[`Image priority=true renders correctly 1`] = `
<ForwardRef
  data={
    {
      "base64": "data:image/jpeg;base64,<IMAGE-DATA>",
      "height": 421,
      "src": "https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750",
      "width": 750,
    }
  }
  priority={true}
>
  <div
    style={
      {
        "maxWidth": 750,
        "overflow": "hidden",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <img
      alt=""
      aria-hidden="true"
      src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI3NTAiIGhlaWdodD0iNDIxIj48L3N2Zz4="
      style={
        {
          "display": "block",
          "width": "100%",
        }
      }
    />
    <img
      alt=""
      aria-hidden="true"
      src="data:image/jpeg;base64,<IMAGE-DATA>"
      style={
        {
          "height": "110%",
          "left": "-5%",
          "maxHeight": "none",
          "maxWidth": "none",
          "objectFit": undefined,
          "objectPosition": undefined,
          "opacity": 0,
          "position": "absolute",
          "top": "-5%",
          "transition": "opacity 500ms",
          "width": "110%",
        }
      }
    />
    <picture>
      <source
        srcSet="https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=0.25 187w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=0.5 375w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=0.75 562w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750 750w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=1.5 1125w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=2 1500w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=3 2250w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=4 3000w"
      />
      <img
        alt=""
        fetchpriority="high"
        onLoad={[Function]}
        src="https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750"
        style={
          {
            "height": "100%",
            "left": 0,
            "maxHeight": "none",
            "maxWidth": "none",
            "objectFit": undefined,
            "objectPosition": undefined,
            "opacity": 1,
            "position": "absolute",
            "top": 0,
            "transition": "opacity 500ms",
            "width": "100%",
          }
        }
      />
    </picture>
    <noscript>
      <picture />
    </noscript>
  </div>
</ForwardRef>
`;

exports[`Image usePlaceholder=false renders correctly 1`] = `
<ForwardRef
  data={
    {
      "base64": "data:image/jpeg;base64,<IMAGE-DATA>",
      "height": 421,
      "src": "https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750",
      "width": 750,
    }
  }
  usePlaceholder={false}
>
  <div
    style={
      {
        "maxWidth": 750,
        "overflow": "hidden",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <img
      alt=""
      aria-hidden="true"
      src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI3NTAiIGhlaWdodD0iNDIxIj48L3N2Zz4="
      style={
        {
          "display": "block",
          "width": "100%",
        }
      }
    />
    <picture>
      <source
        srcSet="https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=0.25 187w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=0.5 375w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=0.75 562w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750 750w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=1.5 1125w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=2 1500w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=3 2250w,https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750&dpr=4 3000w"
      />
      <img
        alt=""
        onLoad={[Function]}
        src="https://www.datocms-assets.com/205/image.png?ar=16%3A9&fit=crop&w=750"
        style={
          {
            "height": "100%",
            "left": 0,
            "maxHeight": "none",
            "maxWidth": "none",
            "objectFit": undefined,
            "objectPosition": undefined,
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "transition": "opacity 500ms",
            "width": "100%",
          }
        }
      />
    </picture>
    <noscript>
      <picture />
    </noscript>
  </div>
</ForwardRef>
`;
